# mac_monitor

./: Cargo.toml  README.md  build.rs
bar/: .gitignore  AppDelegate.swift  Package.swift  SystemMonitorApp-Bridging-Header.m  build.sh  system_monitor.h
src/: main.rs
src/components/: hardware.c  hardware.h
status/: Cargo.toml  build.rs
status/examples/: monitor.rs
status/src/: lib.rs  main.rs
status/src/config/: config.c  config.h
status/src/module/disk/: disk.rs
status/src/module/m1/: chip.rs  sources.rs
status/src/module/net/: network.rs
